Creado mediante Colaboratory

--- a/LopezJ_Taller0.ipynb
+++ b/LopezJ_Taller0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMlxvDM9vXOVmnaGwzTpDdA",
+      "authorship_tag": "ABX9TyO2ILudOwxgK3iuGbvjn9vl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,6 +96,38 @@
           "name": "stdout",
           "text": [
             "Buenos días Johan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tercer ejercicio"
+      ],
+      "metadata": {
+        "id": "zO9rV9pil6K4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Adios')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cLtvBl8tl8Pv",
+        "outputId": "59d7e310-312f-4ea2-8d52-b41ab6fd71d3"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Adios\n"
           ]
         }
       ]
